clean up legacy code

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ test =
 [options.entry_points]
 asdf.extensions =
     weldx = weldx.asdf.extension:get_extensions
-    weldx_validators = weldx.asdf._extension:WeldxLegacyExtension
+    weldx_validators = weldx.asdf._extension:WeldxValidatorExtension
 asdf.resource_mappings =
     weldx_schemas = weldx.asdf.extension:get_resource_mappings
 console_scripts =
