update manifest description

--- a/weldx/asdf/manifests/weldx-1.0.0.yaml
+++ b/weldx/asdf/manifests/weldx-1.0.0.yaml
@@ -3,11 +3,7 @@
 id: asdf://weldx.bam.de/weldx/manifests/weldx-1.0.0
 extension_uri: asdf://weldx.bam.de/weldx/extensions/weldx-1.0.0
 title: weldx extension manifest for tag mapping
-description: |
-  This manifest list all tags URIs and associated schema URIs supported by weldx.
-
-  All tags implemented by WeldxConverter should be listed here.
-  For compatibility the schema mappings are also provided with the legacy tag format.
+description: Manifest listing all tag URIs with schema URIs supported by weldx
 tags:
 # --------------------------------------------------------------------------------
 # ASDF internals
