--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ testpaths =
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow to run (skipped by default, enable with --runslow option)
-asdf_schema_root = weldx/asdf/schemas
+asdf_schema_root = weldx/schemas
 #asdf_schema_tests_enabled = true
 #asdf_schema_skip_tests =
 #    weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
