--- a/setup.cfg
+++ b/setup.cfg
@@ -92,7 +92,7 @@ exclude =
 # convention numpy is currently equivalent to ignoring 'D107', 'D203', 'D212', 'D213', 'D402', 'D413'
 convention = numpy
 match = (?!__)(?!_version)(?!conftest).*\.py
-match_dir = [^\.][^\docs].*
+match_dir = [^\.][^\docs][^\tags].*
 
 [tool:pytest]
 addopts = --tb=short --color=yes -rsw --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules
@@ -140,6 +140,8 @@ show_error_codes = True
 show_column_numbers = True
 
 [mypy-weldx.asdf.*]
+ignore_errors = True
+[mypy-weldx.tags.*]
 ignore_errors = True
 [mypy-weldx.tests.*]
 ignore_errors = True
