--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -4,16 +4,12 @@ on: [push, pull_request]
 jobs:
   pytest:
     name: pytest asdf
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        py: ['3.8']
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.py }}
+          python-version: '3.8'
       - name: pip installs
         run: |
           pip install -e .[test]
