--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -63,7 +63,7 @@ jobs:
         shell: cmd
 
       - name: run pytest
-        if: (matrix.os == 'ubuntu-latest') || ${{ github.event_name == 'pull_request' || github.ref == 'refs/heads/master'}}
+        if: (matrix.os == 'ubuntu-latest') || (github.event_name == 'pull_request')
         run: |
           pytest -n 2 --runslow --dist=loadfile
           echo "Exited with '$?'"
