--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -3,11 +3,11 @@ on:
   push:
     paths:
       - 'weldx/**'
-      - '.github/workflows/pytest_asdf.yaml'
+      - '.github/workflows/pytest_asdf.yml'
   pull_request:
     paths:
       - 'weldx/**'
-      - '.github/workflows/pytest_asdf.yaml'
+      - '.github/workflows/pytest_asdf.yml'
 
 jobs:
   pytest:
