--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -5,6 +5,7 @@ on:
       - 'weldx/**'
       - '.github/workflows/pytest_asdf.yml'
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'weldx/**'
       - '.github/workflows/pytest_asdf.yml'
