--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,13 +1,17 @@
 name: pytest
 on:
   push:
+    branches:
+      - master
     paths:
       - 'weldx/**'
+      - 'tutorials/**'
       - '.github/workflows/pytest.yml'
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'weldx/**'
+      - 'tutorials/**'
       - '.github/workflows/pytest.yml'
 
 jobs:
