--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: build
 on:
+  # Run every Monday at 6am UTC
+  schedule:
+    - cron: '0 6 * * 1'
   # Trigger the workflow on push events on master and tags
   push:
     branches:
