--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,5 +1,8 @@
 name: documentation
 on:
+  # Run every Monday at 6am UTC
+  schedule:
+    - cron: '0 6 * * 1'
   # Trigger the workflow on push events on master
   push:
     branches:
