--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,5 +1,8 @@
 name: pytest
 on:
+  # Run every Monday at 6am UTC
+  schedule:
+    - cron: '0 6 * * 1'
   push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
