--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -51,7 +51,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: pip installs
-        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
+        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) # || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
         run: |
           pip install wheel
           pip install -e .[test]
@@ -66,7 +66,7 @@ jobs:
         shell: cmd
 
       - name: run pytest
-        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
+        if: ((matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')) # || (github.event.pull_request.draft == false) || (github.ref == 'refs/heads/master')
         run: |
           pytest -n 2 --runslow --dist=loadfile
           echo "Exited with '$?'"
