Update gh actions (#484)
* skip pytest and lint without code changes

* skip pytest for win and osx unless master or PR

* always run on action changes

* dummy comment

* test pytest exclude

* trigger?

* filter?

* actions filter

* skip pip install and fix ci trigger

* update pytest filter

* skip build CI for doc or changelog changes

* exclude full pytest matrix on draft PR

* try with default

* remove defaults

* include PR state changes

* try on master branch

* run on every push event

* add schedule

* add schedule

* ignore master

* rework

* activate step filters for PR/master again

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,9 @@ on:
   release:
     types:
       - created
+  # Run every Monday at 6am UTC
+  schedule:
+    - cron: '0 6 * * 1'
 
 jobs:
   build:
