--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,17 @@ on:
   # Trigger the workflow on relevant pull request events
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
+    paths-ignore:
+      - 'CHANGELOG.md'
+      - 'doc/**'
+      - '!.github/workflows/build.yml'
   # Trigger the workflow on all release created events (this could redirect to main conda channel)
   release:
     types:
       - created
+  # Run every Monday at 6am UTC
+  schedule:
+    - cron: '0 6 * * 1'
 
 jobs:
   conda:
