Somehow this works

--- a/setup.cfg
+++ b/setup.cfg
@@ -108,7 +108,7 @@ asdf_schema_skip_tests =
     weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
 norecursedirs = doc
 filterwarnings =
-    ignore:Sentinel is not a public part of the traitlets API.:DeprecationWarning
+    ignore::DeprecationWarning
 
 [isort]
 profile = black
