--- a/setup.cfg
+++ b/setup.cfg
@@ -107,6 +107,8 @@ asdf_schema_root = weldx/schemas
 #asdf_schema_skip_tests =
 #    weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
 norecursedirs = doc
+filterwarnings =
+    ignore::DeprecationWarning:traittypes.*:
 
 [isort]
 profile = black
