Dummy inline arrays in asdf.util and weldxfile (#469)
* added dummy inline arrays to write_buffer
* fix memory issue in WeldxFile.display_header by not deepcopying ndarray.
* run memory test on osx again, do not garbage collect
* added pytest args to dynamically switch read/write_buffer funcs to use WeldxFile

Co-authored-by: Cagtay Fabry <43667554+CagtayFabry@users.noreply.github.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -77,6 +77,11 @@ jobs:
           pytest -n 2 --dist loadfile --nbval --current-env --cov-append tutorials/
           echo "Exited with '$?'"
 
+      - name: test with WeldxFile
+        if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
+        run: |
+          pytest -n2 --dist loadfile --weldx-file-rw-buffer --weldx-file-rw-buffer-disp-header --cov-append ./weldx/tests/asdf_tests
+
       - name: coverage xml (combination is performed by pytest-cov)
         if: (matrix.os == 'ubuntu-latest') && (matrix.py == '3.8')
         run: coverage xml
